# genieutils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  qBuildDebug.bat  qBuildRelease.bat
.github/workflows/: build_cmake.yml
doc/: genieutils.doxygen
include/genie/: Types.h
include/genie/dat/: ActionType.h  Civ.h  DatFile.h  Graphic.h  GraphicAttackSound.h  GraphicDelta.h  PlayerColour.h  RandomMap.h  Research.h  ResourceType.h  ResourceUsage.h  Sound.h  SoundItem.h  TechTree.h  Techage.h  TechageEffect.h  Terrain.h  TerrainBlock.h  TerrainBorder.h  TerrainCommon.h  TerrainPassGraphic.h  TerrainRestriction.h  Unit.h  UnitCommand.h  UnitHeader.h  UnitLine.h  Unknown.h
include/genie/dat/unit/: Action.h  AttackOrArmor.h  Bird.h  Building.h  BuildingAnnex.h  BuildingCombat.h  Combat.h  Creatable.h  DamageGraphic.h  DeadFish.h  Missile.h  Moving.h  Projectile.h  ProjectileOnly.h  Type50.h
include/genie/file/: CabFile.h  Compressor.h  IFile.h  ISerializable.h  LZ4.h
include/genie/lang/: LangFile.h
include/genie/resource/: AviFile.h  BinaFile.h  BlendomaticFile.h  Color.h  DdsFile.h  DrsFile.h  EdgeFiles.h  MaskPattern.h  PalFile.h  Slope.h  SlpFile.h  SlpFrame.h  SlpTemplate.h  SmpFile.h  SmpFrame.h  SmxFile.h  SmxFrame.h  TileSpan.h  UIFile.h  WavFile.h
include/genie/savegame/: MgxFile.h
include/genie/script/: ScnFile.h
include/genie/script/scn/: MapDescription.h  ScnPlayerData.h  ScnResource.h  Trigger.h
include/genie/util/: Logger.h  Utility.h
src/dat/: Civ.cpp  DatFile.cpp  Graphic.cpp  GraphicAttackSound.cpp  GraphicDelta.cpp  PlayerColour.cpp  Projectile.cpp  RandomMap.cpp  Research.cpp  Sound.cpp  SoundItem.cpp  TechTree.cpp  Techage.cpp  TechageEffect.cpp  Terrain.cpp  TerrainBlock.cpp  TerrainBorder.cpp  TerrainCommon.cpp  TerrainPassGraphic.cpp  TerrainRestriction.cpp  TestHelpers.h  Unit.cpp  UnitCommand.cpp  UnitHeader.cpp  UnitLine.cpp  Unknown.cpp
src/dat/unit/: Action.cpp  AttackOrArmor.cpp  Bird.cpp  Building.cpp  BuildingAnnex.cpp  BuildingCombat.cpp  Combat.cpp  Creatable.cpp  DamageGraphic.cpp  DeadFish.cpp  Missile.cpp  Moving.cpp  Projectile.cpp  ProjectileOnly.cpp  Type50.cpp
src/file/: CabFile.cpp  Compressor.cpp  IFile.cpp  ISerializable.cpp  LZ4.cpp  LZX.c  LZX.h  lzx.c  lzx.h
src/lang/: LangFile.cpp
src/resource/: AviFile.cpp  BinaFile.cpp  BlendomaticFile.cpp  Color.cpp  DdsFile.cpp  DrsFile.cpp  EdgeFiles.cpp  PalFile.cpp  SlpFile.cpp  SlpFrame.cpp  SlpTemplate.cpp  SmpFile.cpp  SmpFrame.cpp  SmxFile.cpp  SmxFrame.cpp  UIFile.cpp  WavFile.cpp
src/savegame/: MgxFile.cpp
src/script/: ScnFile.cpp
src/script/scn/: MapDescription.cpp  ScnPlayerData.cpp  ScnResource.cpp  Trigger.cpp
src/tools/bincompare/: bincomp.cpp  bincomp.h  main.cpp
src/tools/cabtool/: CMakeLists.txt  cabtool.cpp
src/tools/cpxtool/: cpxtool.cpp
src/tools/drsexplorer/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
src/tools/drstool/: drstool.cpp
src/tools/extract/: datextract.cpp
src/tools/pcriotool/: pcriotool.cpp
src/tools/picviewer/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
src/tools/replayparser/: main.cpp
src/tools/test/: test.cpp
src/tools/vooblydecoder/: main.cpp
src/util/: Logger.cpp  Utility.cpp
tests/: DatTest.cpp  LangTest.cpp  decompressed-mgx
